<resources>
    <string name="app_name">Warisan Kuliner</string>
    <string name="my_name">Muhammad Salahudin Al Ayyubi</string>
    <string name="my_gmail">salahudin2122004@gmail.com</string>
    <string name="text_desc_img">Image Kuliner</string>
    <string name="text_nama_kuliner">Nama Kuliner:</string>
    <string name="text_tempat_asal">Tempat Asal:</string>
    <string name="text_daerah">Daerah:</string>
    <string name="text_bahan_utama">Bahan Utama:</string>
    <string name="text_variasi">Variasi:</string>
    <string name="text_desc_kuliner">Deskripsi</string>
    <string name="text_share">Share</string>
    <string name="sample_nama">Nasi Tempong</string>
    <string name="sample_tempat">Indonesia</string>
    <string name="sample_daerah">Daerah Istimewa Yogyakarta, menyebar secara nasional ke seluruh Indonesia</string>
    <string name="sample_bahan_utama">gorengan tahu, lontong atau ketupat, tauge, bihun, mentimun, disajikan dengan saus kacang dan kecap manis, dengan taburan krupuk dan bawang merah goreng</string>
    <string name="sample_variasi">Pempek kapal selam (pempek telok besak), pempek telok kecik, pempek keriting, pempek lenjer, pempek kulit, pempek tahu, pempek adaan, pempek pistel, pempek udang, pempek belah, pempek panggang, pempek lenggang</string>
    <string name="sample_desc">Pempek mempunyai sejarah yang unik dan tidak dapat dilepaskan dari masuknya para perantau Tionghoa ke Palembang semasa pemerintahan Kesultanan Palembang Darussalam ketika dipimpin oleh Sultan Mahmud Badaruddin II pada abad ke-16 Masehi. Berdasarkan cerita masyarakat, pempek dijual keliling kota oleh seseorang asal Tionghoa yang sering dipanggil Apek di kisaran tahun 1617 M. Apek sendiri di dalam Bahasa Tionghoa memiliki arti paman atau laki-laki tua, Apek sendiri pada saat itu berusia sekitar 65 tahun. Apek yang tinggal di pinggiran Sungai Musi dan memiliki ide untuk memanfaatkan potensi ikan yang melimpah, dengan mengolahnya menjadi makanan selain digulai dan digoreng. Hingga akhirnya, Apek mengolah ikan hasil tangkapannya dan mencampurnya dengan tepung. Mirip dengan makanan bakso yang dibawa pedagang Tiongkok ke Palembang. Setelah itu Apek pun berkeliling menjual produk hasil buatannya yang pada saat itu belum memiliki nama. Saat ada yang ingin membeli, mereka akan memanggil Apek dengan ujung namanya saja, yaitu "peek..peek", hingga akhirnya menjadi asal mula nama pempek. Dengan demikian, bisa disimpulkan bahwa sejarah pempek melibatkan akulturasi kebudayaan kuliner dari Tiongkok. Pempek sendiri adalah adaptasi Palembang dari ngo hiang dan kekkian, yang sama-sama merupakan makanan olahan dari ikan. Namun alih-alih disajikan ke dalam sup atau digoreng saja, pempek terkenal akan cuko, yaitu saus dengan rasa manis, asam dan pedas.</string>
    <string-array name="data_image_kuliner">
        <item>https://upload.wikimedia.org/wikipedia/commons/c/ca/Pempek_Kuah_Cuko.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/3/31/Nasi_Gudeg.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/4/4c/Ayam_bakar_khas_Taliwang_2.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/e/eb/Tongseng_Dish.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/e/e8/Pecel_Hariadhi.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/f/f4/Mie_Aceh_with_beef.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/b/b7/Nasi_tempong_ikan_goreng_1.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/4/4a/Sop_Konro.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/0/0f/Satay_Lilit.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/2/2e/Ketoprak_Boplo.JPG</item>
    </string-array>
    <string-array name="data_nama_kuliner">
        <item>Pempek</item>
        <item>Nasi Gudeg</item>
        <item>Ayam Taliwang</item>
        <item>Tongseng</item>
        <item>Pecel</item>
        <item>Mi Aceh</item>
        <item>Nasi Tempong</item>
        <item>Sop Konro</item>
        <item>Sate lilit</item>
        <item>Ketoprak</item>
    </string-array>
    <string-array name="data_tempat_asal">
        <item>Indonesia</item>
        <item>Indonesia</item>
        <item>Indonesia</item>
        <item>Indonesia</item>
        <item>Indonesia</item>
        <item>Indonesia</item>
        <item>Indonesia</item>
        <item>Indonesia</item>
        <item>Indonesia</item>
        <item>Indonesia</item>
    </string-array>
    <string-array name="data_daerah">
        <item>Palembang, Sumatera Selatan</item>
        <item>Daerah Istimewa Yogyakarta</item>
        <item>Taliwang, Sumbawa Barat, Nusa Tenggara Barat</item>
        <item>Surakarta, Boyolali, Klaten, Magelang, Daerah Istimewa Yogyakarta</item>
        <item>Daerah Istimewa Yogyakarta, menyebar secara nasional ke seluruh Indonesia</item>
        <item>Aceh</item>
        <item>Banyuwangi, Jawa Timur</item>
        <item>Makassar</item>
        <item>Bali</item>
        <item></item>
    </string-array>
    <string-array name="data_bahan_utama">
        <item>Daging ikan, tapioka, telur ayam, air matang, garam</item>
        <item>Nangka muda, santan, gula aren, cabai, aneka bumbu</item>
        <item>Daging ayam kampung</item>
        <item>Daging, kubis, tomat, bawang merah, bawang putih, kuah gulai, kecap manis, merica</item>
        <item>Sayur, sambal kacang</item>
        <item>Mi, daging (kambing atau sapi) atau makanan laut (udang dan ikan), rempah sejenis kari, seledri, daun bawang, bawang merah</item>
        <item>Sambal</item>
        <item>Iga sapi</item>
        <item>Daging cincang (babi, ayam, ikan atau sapi) berbumbu.</item>
        <item>gorengan tahu, lontong atau ketupat, tauge, bihun, mentimun, disajikan dengan saus kacang dan kecap manis, dengan taburan krupuk dan bawang merah goreng</item>
    </string-array>
    <string-array name="data_variasi">
        <item>Pempek kapal selam (pempek telok besak), pempek telok kecik, pempek keriting, pempek lenjer, pempek kulit, pempek tahu, pempek adaan, pempek pistel, pempek udang, pempek belah, pempek panggang, pempek lenggang</item>
        <item>Gudeg kering, gudeg Solo, dan gudeg putih</item>
        <item>-</item>
        <item>Tongseng berkuah</item>
        <item>Pecel lele, nasi pecel, pecel tumpang, pecel Madiun, pecel pakis Colo</item>
        <item>Mi aceh goreng (basah atau kering), mi aceh tumis (dengan sedikit kuah) dan mi aceh kuah</item>
        <item>Pecel lele, nasi lalapan</item>
        <item>Konro bakar</item>
        <item>-</item>
        <item>-</item>
    </string-array>
</resources>