<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailKulinerFragment"
    tools:context=".ui.kuliner.DetailKulinerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            >

            <!-- ImageView for Kuliner image -->

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="165dp"
                android:layout_height="165dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/containerInfo"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                >
                <!-- Nama Kuliner -->
                <TextView
                    android:id="@+id/namaKuliner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nama_kuliner"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/valueNamaKuliner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_nama"
                    android:textSize="14sp" />

                <!-- Tempat Asal -->
                <TextView
                    android:id="@+id/tempatAsal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tempat_asal"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/valueTempatAsal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_tempat"
                    android:textSize="14sp" />

                <!-- Daerah -->
                <TextView
                    android:id="@+id/namaDaerah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_daerah"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/valueNamaDaerah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_daerah"
                    android:textSize="14sp" />

                <!-- Bahan Utama -->
                <TextView
                    android:id="@+id/bahanUtama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_bahan_utama"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/valeuBahanUtama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_bahan_utama"
                    android:textSize="14sp" />

                <!-- Variasi -->
                <TextView
                    android:id="@+id/textVariasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_variasi"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/valueVariasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_variasi"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/containerInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/labelDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_desc_kuliner"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/sampleDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_desc"
                    android:layout_gravity="start"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_share"
                    android:layout_marginTop="10dp"
                    app:cornerRadius="5dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:icon="@drawable/baseline_share_24"
                    app:iconGravity="textStart"
                    />

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</FrameLayout>